Fix alignement

--- a/blog/blog.css
+++ b/blog/blog.css
@@ -57,7 +57,7 @@ li {
 .data-banner {
   margin-top: -5px;
   margin-bottom: 30px;
-  margin-right: 5px;
+  margin-right: 8px;
   text-align: right;
   font-size: 14px;
   letter-spacing: -1px;
